<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.7.2</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <groupId>com.lllbllllb</groupId>
    <artifactId>product-info-service</artifactId>
    <version>${revision}</version>
    <name>Product Info Service - Parent</name>
    <packaging>pom</packaging>

    <properties>
        <revision>0.0.1-SNAPSHOT</revision>
        <java.version>17</java.version>
        <spring-cloud.version>2021.0.3</spring-cloud.version>
        <testcontainers.version>1.17.3</testcontainers.version>
        <mojo.build.helper.plugin.version>3.2.0</mojo.build.helper.plugin.version>
        <flatten.maven.plugin.version>1.2.2</flatten.maven.plugin.version>
        <guava.version>31.1-jre</guava.version>
        <commons-compress.version>1.21</commons-compress.version>
    </properties>

    <modules>
        <module>product-info-service-runner</module>
        <module>product-info-service-core</module>
        <module>product-info-service-database-migration</module>
        <module>product-info-service-core-api</module>
        <module>product-info-service-repository-local</module>
        <module>product-info-service-controller</module>
        <module>product-info-service-repository-remote</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>testcontainers-bom</artifactId>
                <version>${testcontainers.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-compress</artifactId>
                <version>${commons-compress.version}</version>
            </dependency>

            <dependency>
                <groupId>com.lllbllllb</groupId>
                <artifactId>product-info-service-core</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>com.lllbllllb</groupId>
                <artifactId>product-info-service-database-migration</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>com.lllbllllb</groupId>
                <artifactId>product-info-service-core-api</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>com.lllbllllb</groupId>
                <artifactId>product-info-service-repository-local</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>com.lllbllllb</groupId>
                <artifactId>product-info-service-controller</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>com.lllbllllb</groupId>
                <artifactId>product-info-service-repository-remote</artifactId>
                <version>${revision}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>${guava.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <configuration>
                        <excludes>
                            <exclude>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                            </exclude>
                        </excludes>
                    </configuration>
                    <executions>
                        <execution>
                            <goals>
                                <goal>repackage</goal>
                                <goal>build-info</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>build-helper-maven-plugin</artifactId>
                    <!--                    <version>${mojo.build.helper.plugin.version}</version>-->
                    <executions>
                        <execution>
                            <id>attach-artifact</id>
                            <phase>package</phase>
                            <goals>
                                <goal>attach-artifact</goal>
                            </goals>
                            <configuration>
                                <artifacts>
                                    <artifact>
                                        <file>${project.build.directory}/${project.artifactId}-${project.version}.jar.original</file>
                                        <classifier>original</classifier>
                                    </artifact>
                                </artifacts>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>flatten-maven-plugin</artifactId>
                    <version>${flatten.maven.plugin.version}</version>
                    <configuration>
                        <updatePomFile>true</updatePomFile>
                        <flattenMode>resolveCiFriendliesOnly</flattenMode>
                    </configuration>
                    <executions>
                        <execution>
                            <id>flatten</id>
                            <phase>process-resources</phase>
                            <goals>
                                <goal>flatten</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>flatten.clean</id>
                            <phase>clean</phase>
                            <goals>
                                <goal>clean</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

</project>
